--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+amqp==2.3.2
+billiard==3.5.0.4
+celery==4.2.1
 certifi==2018.8.24
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.1.1
+django-celery-results==1.0.1
 django-cors-headers==2.4.0
 django-filter==2.0.0
 django-rest-swagger==2.2.0
@@ -13,6 +17,7 @@ gunicorn==19.9.0
 idna==2.7
 itypes==1.1.0
 Jinja2==2.10
+kombu==4.2.1
 MarkupSafe==1.0
 openapi-codec==1.3.2
 Pillow==5.2.0
@@ -27,3 +32,4 @@ six==1.11.0
 text-unidecode==1.2
 uritemplate==3.0.0
 urllib3==1.23
+vine==1.1.4
