--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.1.1
 django-celery-results==1.0.1
+django-ckeditor==5.6.1
 django-cors-headers==2.4.0
 django-filter==2.0.0
+django-js-asset==1.1.0
 django-rest-swagger==2.1.2
 djangorestframework==3.8.2
 factory-boy==2.11.1
