Deploy confs add frontend app

--- a/deploy/confs/betterself_super.conf
+++ b/deploy/confs/betterself_super.conf
@@ -2,6 +2,9 @@
 logfile_backups = 3
 environment=LANG="en_US.utf8", LC_ALL="en_US.UTF-8", LC_LANG="en_US.UTF-8"
 
+[group:frontend]
+programs=betterself_frontend
+
 [program:betterself_wsgi_app]
 command=gunicorn betterself_backend.wsgi -c /home/ubuntu/betterself_backend/deploy/gunicorn.py
 directory=/home/ubuntu/betterself_backend
@@ -12,3 +15,16 @@ user=ubuntu
 redirect_stderr=false
 stdout_logfile=/var/log/supervisor/betterself_wsgi_app.log
 stderr_logfile=/var/log/supervisor/betterself_wsgi_app_errors.log
+
+[program:betterself_frontend]
+command=npm run start
+directory=/home/ubuntu/betterself_frontend
+autostart=true
+autorestart=true
+killasgroup=true
+stopasgroup=true
+stopsignal=QUIT
+user=ubuntu
+redirect_stderr=false
+stdout_logfile=/var/log/supervisor/betterself_frontend.log
+stderr_logfile=/var/log/supervisor/betterself_frontend_errors.log
